# nautiluscoin

./: .gitignore  .travis.yml  COPYING  INSTALL  Makefile.am  README.md  configure.ac
build-aux/m4/: nautiluscoin_find_bdb48.m4  nautiluscoin_qt.m4
contrib/: README.md  nautiluscoind.bash-completion
contrib/bitrpc/: bitrpc.py
contrib/debian/: changelog  control  copyright  nautiluscoin-qt.install  nautiluscoind.install  rules
contrib/devtools/: README.md  update-translations.py
contrib/gitian-descriptors/: README.md  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win.yml
contrib/gitian-downloader/: linux-download-config  win32-download-config
contrib/init/: README.md  nautiluscoind.conf  nautiluscoind.openrc  nautiluscoind.openrcconf  nautiluscoind.service
contrib/linearize/: README.md  example-linearize.cfg  linearize-data.py  linearize-hashes.py
contrib/macdeploy/: DS_Store  README.md  background.psd  detached-sig-apply.sh  detached-sig-create.sh  macdeployqtplus
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md  makeseeds.py
contrib/spendfrom/: setup.py  spendfrom.py
contrib/testgen/: base58.py
contrib/verifysfbinaries/: README.md  verify.sh
depends/: README  README.usage  config.site.in
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  bootstrap.md  build-osx.md  build-unix.md  coding.md  dnsseed-policy.md  gitian-building.md  init.md  release-notes.md  release-process.md  tor.md  translation_process.md  travis-ci.txt
doc/release-notes/: release-notes-0.3.12.md  release-notes-0.3.13.md  (+35 more)
share/: setup.nsi.in
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  amount.cpp  amount.h  base58.cpp  base58.h  bignum.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  core_io.h  core_read.cpp  core_write.cpp  crypter.cpp  crypter.h  db.cpp  (+85 more)
src/compat/: glibc_compat.cpp  glibc_sanity.cpp  glibcxx_compat.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/crypto/: common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  rfc6979_hmac_sha256.cpp  rfc6979_hmac_sha256.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/json/: json_spirit_value.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: Makefile  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.h  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  nautiluscoin.cpp  nautiluscoin.qrc  nautiluscoin_locale.qrc  nautiluscoinaddressvalidator.h  nautiluscoinamountfield.cpp  nautiluscoinamountfield.h  nautiluscoingui.cpp  nautiluscoingui.h  nautiluscoinstrings.cpp  nautiluscoinunits.cpp  nautiluscoinunits.h  networkstyle.cpp  networkstyle.h  notificator.cpp  notificator.h  openuridialog.h  (+55 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: nautiluscoin_ach.ts  nautiluscoin_af_ZA.ts  nautiluscoin_ar.ts  nautiluscoin_be_BY.ts  nautiluscoin_bg.ts  nautiluscoin_bs.ts  nautiluscoin_ca.ts  nautiluscoin_ca@valencia.ts  nautiluscoin_ca_ES.ts  nautiluscoin_cmn.ts  nautiluscoin_cs.ts  nautiluscoin_cy.ts  nautiluscoin_da.ts  nautiluscoin_de.ts  nautiluscoin_el_GR.ts  nautiluscoin_en.ts  nautiluscoin_eo.ts  nautiluscoin_es.ts  nautiluscoin_es_CL.ts  nautiluscoin_es_DO.ts  nautiluscoin_es_MX.ts  nautiluscoin_es_UY.ts  nautiluscoin_et.ts  nautiluscoin_eu_ES.ts  nautiluscoin_fa.ts  nautiluscoin_fa_IR.ts  nautiluscoin_fi.ts  nautiluscoin_fr.ts  nautiluscoin_fr_CA.ts  nautiluscoin_gl.ts  nautiluscoin_gu_IN.ts  nautiluscoin_he.ts  nautiluscoin_hi_IN.ts  nautiluscoin_hr.ts  nautiluscoin_hu.ts  nautiluscoin_id_ID.ts  nautiluscoin_it.ts  nautiluscoin_ja.ts  nautiluscoin_ka.ts  nautiluscoin_kk_KZ.ts  (+31 more)
src/qt/res/: nautiluscoin-qt-res.rc
src/qt/test/: Makefile  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/script/: interpreter.cpp  interpreter.h  nautiluscoinconsensus.cpp  nautiluscoinconsensus.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/src/java/: org_nautiluscoin_NativeSecp256k1.c  org_nautiluscoin_NativeSecp256k1.h
src/secp256k1/src/java/org/nautiluscoin/: NativeSecp256k1.java
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile  README.md  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bignum.h  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  main_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  nautiluscoin-util-test.py  netbase_tests.cpp  pmt_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  sanity_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum_tests.cpp  serialize_tests.cpp  sighash_tests.cpp  sigopcount_tests.cpp  skiplist_tests.cpp  test_nautiluscoin.cpp  timedata_tests.cpp  transaction_tests.cpp  (+3 more)
src/test/data/: README.md  base58_encode_decode.json  nautiluscoin-util-test.json  sighash.json  tx_valid.json
src/univalue/: gen.cpp  univalue.h  univalue_escapes.h
(+42 files in other folders)
